[workspace]
members = [
    "ec2rust",
    "c2rust-ast-builder",
    "c2rust-ast-exporter",
    "c2rust-bitfields",
    "c2rust-bitfields-derive",
    "c2rust-build-paths",
    "c2rust-transpile",
    "deps-builder",
]

[workspace.package]
version = "0.18.0"
authors = ["The C2Rust Project Developers <c2rust@immunant.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://c2rust.com/"
repository = "https://github.com/licheam/c2rust/"
license = "BSD-3-Clause"
keywords = ["transpiler", "migration", "translation", "c"]
categories = [
    "development-tools",
    "development-tools::ffi",
    "command-line-utilities",
]

[profile.dev.package."*"]
opt-level = 3
