[workspace]
members = [
    "ec2rust",
    "c2rust-ast-builder",
    "c2rust-ast-exporter",
    "c2rust-bitfields",
    "c2rust-bitfields-derive",
    "c2rust-build-paths",
    "c2rust-transpile",
    "deps-builder",
]

[workspace.package]
version = "0.18.0"
authors = ["Depso, ISCAS"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Licheam/utils-translator"
repository = "https://github.com/Licheam/utils-translator"
license = "BSD-3-Clause"
keywords = ["transpiler", "migration", "translation", "c"]
categories = [
    "development-tools",
    "development-tools::ffi",
    "command-line-utilities",
]

[profile.dev.package."*"]
opt-level = 3
