[package]
name = "deps-builder"
version = "0.18.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["cargo", "derive"] }
dot-generator = "0.2.0"
dot-structures = "0.1.1"
graphviz-rust = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
